fix path for family trees; move species pic-indicator to a menu; fix column names and spacing in them

--- a/app/assets/stylesheets/whole_project.css.scss
+++ b/app/assets/stylesheets/whole_project.css.scss
@@ -130,4 +130,5 @@ footer {
 .species-indicator {
   height: 32px;
   width: 32px;
+  margin: 5px;
 }
